mapfishapp/src/main/webapp/app/css/main.css
/* 
 * hide the OpenLayer.Control.ScaleLine bottom part
 */
.olControlScaleLineBottom {
  display: none;
}

/* 
 * give the map a white background (useful for ovmap)
 */
div.olMapViewport {
  background-color:#fff;
  text-align:left;
}

/* 
 * ovmap styling
 */
.olControlOverviewMapElement {
  border-radius: 1em 0 0 0;
  background-color:#e0e0e0;
  padding:10px 18px 10px 10px;
}

/* 
 * fix the scaleline position into the bbar
 */
.olControlScaleLine{
  position: absolute;
  left: 120px;
  bottom: 3px;
}

.mouseposition {
  width: 160px;
}

.measure_path {
  background-image: url(../img/ruler.png) !important;
}

.measure_area {
  background-image: url(../img/ruler_square.png) !important;
}

.x-menu-item .add {
	background-image: url(../img/famfamfam/add.png);
}

/*
 * layer tree
 */
.geor-tree-node .x-tree-node-anchor {
  position: absolute;
  left: 20px;
  right: 50px;
  overflow: hidden;
  text-overflow: ellipsis;
}
.gx-tree-layer-actions {
    float: right;
}
.gx-tree-layer-action {
    background-position: center center;
    background-repeat: no-repeat;
    border: 0 none;
    height: 16px;
    margin: 1px;
    padding: 0;
    vertical-align: top;
    width: 16px;
}
.gx-tree-layer-actions .up {
    background: transparent url(../img/famfamfam/bullet_arrow_up.png);
}
.gx-tree-layer-actions .down {
    background: transparent url(../img/famfamfam/bullet_arrow_down.png);
}
.gx-tree-layer-actions .delete {
    background: transparent url(../img/famfamfam/cross.gif);
}
.gx-tree-layer-panel {
    background: none;
    border-style: none;
    position: relative;
}
.gx-tree-layer-panel-bwrap {
    overflow: visible;
}
.geor-tree-layer-panel-body {
	overflow: hidden;
	text-overflow: ellipsis;
}
.geor-tree-node .x-tree-elbow, .geor-tree-node .x-tree-elbow-end {
   width: 0px !important;    
}

.x-tree-node-collapsed .x-tree-node-icon, .x-tree-node-expanded .x-tree-node-icon, .x-tree-node-leaf .gx-tree-layer-icon {
   width: 0px !important;
}
.geor-tree-node {
    border-bottom: thin dotted #D7D7D7;
    padding: 3px 0 0 3px;
}
.geor-toolbar {
    background: none; !important;
    border-style: none; !important;
}
.geor-btn-style {
    background-image: url(../img/famfamfam/map_edit.png) !important;
}
.geor-btn-layerinfo {
    background-image: url(../img/fugue/question-white.png) !important;
}
.geor-btn-zoom {
    background-image: url(../img/famfamfam/arrow_out.png) !important;
}
.geor-btn-refresh {
    background-image: url(../img/famfamfam/arrow_refresh.png) !important;
}
.geor-btn-metadata {
    background-image: url(../img/famfamfam/application_view_list.gif) !important;
}
.geor-btn-download {
    background-image: url(../img/famfamfam/disk.png) !important;
}
.geor-service {
    background-image: url(../img/geosilk/server_map.png) !important;
}
.geor-layer {
    background-image: url(../img/famfamfam/map.png) !important;
}
.geor-btn-query {
    background-image: url(../img/famfamfam/cog.gif) !important;
}
.x-btn-icon .geor-btn-info {
    background: transparent url(../img/famfamfam/information.png);
}
.x-btn .btn-add {
    background-image: url(../img/famfamfam/add.png);
}
.x-btn .btn-removeall {
    background-image: url(../img/famfamfam/cross.gif);
}
.geor-save-map {
    background-image: url(../img/famfamfam/folder_page.gif) !important;
}
.geor-load-map {
    background-image: url(../img/famfamfam/map_go.gif) !important;
}
.geor-add-map {
    background-image: url(../img/famfamfam/map_add.png) !important;
}
.geor-load-tools {
    background-image: url(../img/fugue/wrench--plus.png) !important;
}
.geor-permalink {
    background-image: url(../img/famfamfam/link.png) !important;
}
.geor-share {
    background-image: url(../img/share.png) !important;
}
.geor-edit-osm {
    background-image: url(../img/osm_logo.png) !important;
}
.geor-export {
    background-image: url(../img/famfamfam/table_save.png) !important;
}
.geor-geom-save {
    background-image: url(../img/famfamfam/disk.png) !important;
}
/* make sure that menu width is correct in IE8 strict mode (See http://extjs.com/forum/showthread.php?t=70701) */
.x-layer[style]{
 width: auto !important;
}

#waiter {
	position:absolute;
	top:0px;
	left:50%;
	margin-left: -62px;
	z-index:100;
	visibility:hidden;
}
#waiter span {
	background:#EFAE00 none repeat scroll 0 0;
	padding:2px;
	border-radius: 0 0 4px 4px;
}

.olControlLoadingPanel {
	background-image: url(../img/loadingbar.gif) !important;
	background-position:center;
	background-repeat:no-repeat;
	width:100px;
	height:11px;
	bottom:5px;
	left:5px;
	position:absolute;
}

.x-combo-list-item {
    border:1px solid #fff;
    font:12px tahoma,arial,helvetica,sans-serif;
    padding:2px;
    white-space:nowrap;
}
.x-combo-list-item span {
    color: #666;
    font-style: italic;
}

.olControlAttribution {
    font-size: smaller; 
    left:0em;
    bottom:0em;
    position: absolute; 
    display: block;
}
.olControlAttribution a img {
    display: none;
}
.geor-layers-form-text a img {
    display: none;
}

.white-bg {
	background:#fff;
}

.bold-text {
	font:12px tahoma,arial,helvetica,sans-serif;
	font-weight: bold;
}

.geor-btn-sync {
    background-image: url(../img/famfamfam/database_save.png) !important;
}

.geor-btn-cancel {
    background-image: url(../img/famfamfam/cross.gif) !important;
}

.olControlOverviewMapMinimizeButton {
    right: 0px;
    bottom: 80px;
    cursor: pointer;
}
.olControlOverviewMapMaximizeButton {
    right: 0px;
    bottom: 80px;
    cursor: pointer;
}

/* metadata link in treenode */
.x-tree-node a, .x-dd-drag-ghost a {
    color:#201AEF;
}

/* cursor pointer on field label hover */
.layer-editing-panel .x-form-item-label span {
	cursor: pointer;
}

/* mapfish css imported */
.mf-print-action {
    background-image:url(../img/mapfish/printer.png) !important;
}

.zoomin {
    background-image:url(../img/mapfish/icon_zoomin.png) !important;
    height:20px !important;
    width:20px !important;
}

.zoomout {
    background-image:url(../img/mapfish/icon_zoomout.png) !important;
    height:20px !important;
    width:20px !important;
}

.zoomfull {
    background-image:url(../img/mapfish/icon_zoomfull.png) !important;
    height:20px !important;
    width:20px !important;
}

.pan {
    background-image:url(../img/mapfish/icon_pan.png) !important;
    height:20px !important;
    width:20px !important;
}

.back {
    background-image:url(../img/mapfish/resultset_previous.png) !important;
    height:20px !important;
    width:20px !important;
}

.next {
    background-image:url(../img/mapfish/resultset_next.png) !important;
    height:20px !important;
    width:20px !important;
}

.modifyfeature {
    background-image:url(../img/mapfish/move_vertex_off.png) !important;
    height:20px !important;
    width:20px !important;
}

.info {
  background-image:url(../img/mapfish/info.png) !important;
  height:20px !important;
  width:20px !important;
}

.even {
	background: #F0F0F0
}
.odd {
	background: #FEFFFF
}

.box-as-panel {
    font: normal 12px tahoma, arial, helvetica, sans-serif;
    padding: 10px;
    background: #fff;
}

/* styles for ext.dataview in layer finder */

.x-list {
	background-color: #fff;
	height: 100% !important;
}
.x-list div.x-view-over {
	background-color: #ddd !important;
}
.x-list div.x-view-selected {
	background-color: #9ab3c5 !important;
}
.x-list div.x-view-item {
	background-color: #eee;
	margin: 5px;
	padding: 5px;
	cursor: pointer;
}
.x-list div.x-view-item img.thumb {
	padding: 5px;
	border: 1px solid #bbb;
	max-width: 180px; /* to cope with larger images (geonetwork has 180px thumbnails)*/
}
.x-list a {
	color: #777;
}

/* Bold layer names in layer manager http://applis-bretagne.fr/redmine/issues/4532 */
.geor-tree-node a.x-tree-node-anchor span {
	font-weight: bold;
	color: #333;
}

/* context selector */
.context-selector {
    background: #fff;
    font-size: 11px;
    font-family: tahoma,arial,verdana,sans-serif;
}
.context-selector .thumb {
    background: #dddddd;
    padding: 3px;
}
.context-selector .thumb img {
    height: 60px;
    width: 110px;
}
.context-selector .thumb-wrap {
    float: left;
    margin: 4px;
    margin-right: 0;
    padding: 5px;
    cursor: pointer;
}

.context-selector .thumb-wrap span {
    display: block;
    overflow: hidden;
    text-align: center;
    text-overflow: ellipsis;
    width: 116px;
}

.context-selector .x-view-over {
    border:1px solid #dddddd;
    background-color: #efefef;
    padding: 4px;
}

.context-selector .x-view-selected {
    background-color: #eff5fb;
    border: 1px solid #99bbe8;
    padding: 4px;
}

.context-selector .default {
    font-weight: bold;
}

/* correct button focus with chromium */
/* from http://www.sencha.com/forum/archive/index.php/t-82116.html */
.x-btn-focus .x-btn-tl{
    background-position: -6px 0;
}

.x-btn-focus .x-btn-tr{
    background-position: -9px 0;
}

.x-btn-focus .x-btn-tc{
    background-position: 0 -9px;
}

.x-btn-focus .x-btn-ml{
    background-position: -6px -24px;
}

.x-btn-focus .x-btn-mr{
    background-position: -9px -24px;
}

.x-btn-focus .x-btn-mc{
    background-position: 0 -2168px;
}

.x-btn-focus .x-btn-bl{
    background-position: -6px -3px;
}

.x-btn-focus .x-btn-br{
    background-position: -9px -3px;
}

.x-btn-focus .x-btn-bc{
    background-position: 0 -18px;
}

/* checked menu item */
.x-menu-list .x-menu-item-checked {
	font-weight: bold;
}

/* avoid broken WMTS tiles at the lower end of the pyramid */
.olImageLoadError {
	display: none;
}

/* base layers are shown with a different color */
#geor-layerManager .geor-baselayer {
	background-color: #f2f0f5;
}

/* Mouse pointer hover editor grid row: */
.editorgrid .x-grid3-td-value div {
	cursor: pointer !important;
}

.now-editing button {
    color: red !important;
}

.geor-btn-edit-point {
    background-image:url(../img/geosilk/pencil_add.png) !important;
}

.geor-btn-edit-line {
	background-image:url(../img/geosilk/line_orange_add.png) !important;
}

.geor-btn-edit-polygon {
	background-image:url(../img/geosilk/shape_square_orange_add.png) !important;
}

.help .x-box-mc {
    font-size:14px;
}
#help-div {
    position:absolute;
    left:35%;
    top:10px;
    width:350px;
    z-index:20000;
}

#geor-layerManager .x-tree-node .x-tree-selected {
	background-color: #fff;
}

